--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>contatos</groupId>
-	<artifactId>ContatosEJB</artifactId>
+	<groupId>monitoria</groupId>
+	<artifactId>monitoria</artifactId>
 	<packaging>war</packaging>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>ContatosEJB Maven Webapp</name>
+	<name>monitoria</name>
 	<url>http://maven.apache.org</url>
 	<dependencies>
 		<dependency>
@@ -16,7 +16,7 @@
 		</dependency>
 	</dependencies>
 	<build>
-		<finalName>ContatosEJB</finalName>
+		<finalName>monitoria</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
