--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -21,4 +21,12 @@
   <param-name>primefaces.THEME</param-name>
   <param-value>bootstrap</param-value>
 </context-param>
+ <filter>
+      <filter-name>LoginFilter</filter-name>
+      <filter-class>filtro.LoginFilter</filter-class>    
+  </filter>
+  <filter-mapping>
+      <filter-name>LoginFilter</filter-name>
+      <url-pattern>/pages/*</url-pattern>
+  </filter-mapping>
 </web-app>
