--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,26 @@
 			<artifactId>json</artifactId>
 			<version>20160212</version>
 		</dependency>
+		<dependency>
+		  <groupId>com.google.oauth-client</groupId>
+		  <artifactId>google-oauth-client</artifactId>
+		  <version>1.20.0</version>
+		</dependency>
+		<dependency>
+		  <groupId>com.google.oauth-client</groupId>
+		  <artifactId>google-oauth-client-servlet</artifactId>
+		  <version>1.20.0</version>
+		</dependency>
+		<dependency>
+    <groupId>com.google.http-client</groupId>
+    <artifactId>google-http-client-jackson</artifactId>
+    <version>1.15.0-rc</version>
+</dependency>
+<dependency>
+  <groupId>com.google.oauth-client</groupId>
+  <artifactId>google-oauth-client-appengine</artifactId>
+  <version>1.20.0</version>
+</dependency>
 	</dependencies>
 	<build>
 		<finalName>monitoria</finalName>
