--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,21 @@
 		    <artifactId>omnifaces</artifactId>
 		    <version>2.5.1</version>
 		</dependency>
-
+		<dependency>
+            <groupId>com.sparkjava</groupId>
+            <artifactId>spark-core</artifactId>
+            <version>2.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.21</version>
+        </dependency>
+        <dependency>
+            <groupId>com.j2html</groupId>
+            <artifactId>j2html</artifactId>
+            <version>0.7</version>
+        </dependency>
 	</dependencies>
 	<build>
 		<finalName>monitoria</finalName>
